--- a/cyndi.html
+++ b/cyndi.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a website</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="g2RhXox2ns9vV1KRBdrFD0lzVBLx79DmEcyPHEKrCCta3gAdBDoxh1zYcxEtKkK+HIgzIAUlMui+rA/8NhChAExkvg7XlXjvQ3y6VopnVKkfY6mkwLP/dJUWuaiRq1Gg">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Z8QSgMX+iFx5+tRjhHvX7OqjpHlAmhT6RA2mAAubC1Gku47rtmrDdZrOXAqde0CaxcFFVQa8RJNzfokUvqGQxGarkD2Lzx+EDvWJ4e68hISsMZNohqVA3YDLKtUALgW6">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
