--- a/page4.html
+++ b/page4.html
@@ -52,21 +52,21 @@
                         Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="http://about.barrettins.com">
+                    <a class="nav-link link text-black display-4" href="about.html">
                         About Us
                     </a>
-                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="http://products.barrettins.com">
-                        Products</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="http://media.barrettins.com">
-                        Media</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="http://community.barrettins.com">
-                        Community</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="http://reviews.barrettins.com">
-                        Reviews</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="http://contact.barrettins.com">
+                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
+                        Products</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="media.html">
+                        Media</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="community.html">
+                        Community</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="reviews.html">
+                        Reviews</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="contact.html">
                         Contact</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://www.facebook.com/Barrett-Insurance-202507443153218/" target="_blank"><span class="socicon socicon-facebook mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://twitter.com/barrettinsure" target="_blank"><span class="socicon socicon-twitter mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://www.instagram.com/barrettinsurance/" target="_blank"><span class="socicon socicon-instagram mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://www.linkedin.com/in/barrett-insurance-b91b934a" target="_blank"><span class="socicon socicon-linkedin mbr-iconfont mbr-iconfont-btn"></span></a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><section class="mbr-section content5 cid-r6QfwbDyCS" id="content5-49">
+<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="mbr-section content5 cid-r6QfwbDyCS" id="content5-49">
 
     
 
