--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                     <a class="nav-link link text-black display-4" href="about.html">
                         About Us
                     </a>
-                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
+                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="products.html">
                         Products</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="media.html">
                         Media</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="community.html">
                         Community</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="reviews.html">
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive website templates</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
+<section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
 
     
 
