--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                     <a class="nav-link link text-black display-4" href="about.html">
                         About Us
                     </a>
-                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
+                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="products.html">
                         Products</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="media.html">
                         Media</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="community.html">
                         Community</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="reviews.html">
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">website maker</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -128,7 +128,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="cxGHvIS/WjME6DqmcM8YbE5RlbjN1/i+iSpW5s4WcQ9BRz4uTmxoFFWe0LgApca70rW6HdZH5n/7UIw9MFScVAbp0mhw4jCxmy/st6cGe85JLKGxd5RugWs2gChlF3kp">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6s46JUXqwv9E0hhLPtFyvRxowWvXH+vG/VPuX+dcRqC14Jaqg+RmsjeJs8qMRUu3ISUSQQK55AF0zP78iEsmGW+xBWj2TDfzPN8ADPLTNsLLCQkurxpBMGt4cz+klaqP">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
