--- a/doug.html
+++ b/doug.html
@@ -54,7 +54,7 @@
                     <a class="nav-link link text-black display-4" href="about.html">
                         About Us
                     </a>
-                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
+                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="products.html">
                         Products</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="media.html">
                         Media</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="community.html">
                         Community</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="reviews.html">
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KjuLPrLTdKq6scX5RPBDGfx/Q5V7MLuHy3h/0Th4kc8jlMuCgQJLZE+ndJwyLLiYIVE25dLalZJYPWS+QFoVcgqaja1YZC49nHJ3w+1/rzbDOFYQf3HeD+lpXEGSMiZO">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Cr29ac7wUUV3tWzB14kRh5jLE8dVlFzIY+qG3NAfPn5nthbPxPZD6Rve3zu6gSQuFCQn5tjPUVveTAahIwtPhpxXnJW/lxPRb4UtcF0NDrotYS/bGuLmAsYvuOWsTaFC">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
