--- a/frank.html
+++ b/frank.html
@@ -54,7 +54,7 @@
                     <a class="nav-link link text-black display-4" href="about.html">
                         About Us
                     </a>
-                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
+                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="products.html">
                         Products</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="media.html">
                         Media</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="community.html">
                         Community</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="reviews.html">
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="mbr-section content5 cid-r6QgitsG48" id="content5-4y">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section content5 cid-r6QgitsG48" id="content5-4y">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Fzy1B3aPS/xUWMiEXkxMxlyRXGihVkRaP4TeE5bR2RWs/+d6P36L2E/vZpipvMOsIzHVlk95wojTg0Q7W1a7UcFqLqbPjMyxw2+MrPffySJur5e5b/SbiS1G4dI/PpXE">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ESPGS2VlVKuNZRX9b881VERO/ynLV/hf/Zeb/9Z7m2rf3nMtjIFOAdfrGdD9E7Wi/Mn97jtkIN5mIFAMKKk8FLlXXbLiEeO03lM4ifukiO7Xh5P+i+qsjlLnIqJ+Cl0t">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
