--- a/media.html
+++ b/media.html
@@ -54,7 +54,7 @@
                     <a class="nav-link link text-black display-4" href="about.html">
                         About Us
                     </a>
-                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
+                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="products.html">
                         Products</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="media.html">
                         Media</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="community.html">
                         Community</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="reviews.html">
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="mbr-section content5 cid-r6QfBGX7tp" id="content5-4b">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6QfBGX7tp" id="content5-4b">
 
     
 
