--- a/tracey.html
+++ b/tracey.html
@@ -54,7 +54,7 @@
                     <a class="nav-link link text-black display-4" href="about.html">
                         About Us
                     </a>
-                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
+                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="products.html">
                         Products</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="media.html">
                         Media</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="community.html">
                         Community</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="reviews.html">
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="mbr-section content5 cid-r6QfXBAuze" id="content5-4l">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="mbr-section content5 cid-r6QfXBAuze" id="content5-4l">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sW1rkEHJu8qMDhHGySLi/McUMeqOyz47gBf7Kx4OgNfCo9FaXenpblRO819xa076OE6tTuQRLMx9yBZf0DXVi40cGajSVD0xiQS5Emw0JhkbgaEDVrDswlFNLj/Mxkle">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="md8qahV+IN4qodi4l+vt5kDdRGULAryYR9gFPBqUxA/gKDpqi/Z5EEEN+6jpfnXZQ8tsN2VtJCGJtebPHUEgM9rGCZLBiM4bYGVGUkgg/7eesWvLj1U4dJcRlBNOfTco">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
