--- a/cyndi.html
+++ b/cyndi.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ES4NivQO5Z1k+PBDphWsESTHs3+PLFZWvb6GaSTN2BB1S325fP/lvtIsXLQu0RmoLDDZZfIRXp79hzSH0X7KPIennVL4ryRv0L4y5qQWdwEXU5Hq6uexB1XiRQ9FnqO5">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kNBUGjwWvW1kwmHkBhur0N+u+MFtMWCuuHV9iXn0uuWwS49ym0Pm49COsV2k0QEnz6QFnqufADlnU0LXpmzKeHAp3BjyHF9qr2Xkl/hC1SAoajnIIs5suul0Xco9bolG">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
