create github pages

--- a/doug.html
+++ b/doug.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free website maker</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="tMiFBiAAvMrfBjqVSAEpTPraZVYybOKgvsuDPCznRSOPW4UV5hpUovIXTBAurKT1vmidHYBUhZ+TVQR+ohyXZS+5xACxMnTpJrNfcHTbucSNdWppA/4PxsYd6lj8vvXp">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LgqMJqjRa4iG0UyECxjSkupYcwmVb6IrzqEZ8V4SWwSChiRfRnxc6Cxo5NIHDKjQL+w2fLX6e1F2WI81SBkQ2ZZFPfjlKBQUMf1l6TCm1oaspIJ9d3y2b+0AePnMmiAB">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
