--- a/cyndi.html
+++ b/cyndi.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own site for free</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="r4iAi/B5GN9ux1qnYZUQoiguNqsq4Pz1roE55mF6I/o3jm2rI6KcJzcCc6TNZgrt43W3Co+lE0lo2+mcTNMYWQJHcaUlMZKlimWqycvA54LG/N4/bHkzqetpQOgtyflY">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yQgoVrQNyd7RlvUf0x5H0W3kFmhkUxDu2SGO8o/01BPJ5bwBlkMeMes189yHWGPEQk+VHwu59lSABoGGEPJXdNleVATIgdFV9xUr9XTTm9JGrkXaDacFcBJXawpj2G7N">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
