--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy web builder</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -128,7 +128,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ButBJtuE6GuqFzTRSl17oW/Rz8iC3XcXuDPqwrdcm2E7soOsS/LrCShYeEstFplQaHh6OOmW7NaUxg7l2ffPVyPbWGoGDF99N30Io+ZKiSGZSsKUeycdY4hq74/dosRU">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6SYFqbCB0EH6UEBUOSu6aVkQ+JOT2l5ql+e9V594j91QxqJT8ze6BPMoGUOx9Zq7eHXWpvN+kGRKphPuZf/M7YaWoXBOnISxuRpEPpfkzWW78KCyzk1HcwS3NaXioesW">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
