create github pages

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
+<section class="engine"><a href="https://mobirise.info/e">how to make a website</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
 
     
 
@@ -332,7 +332,7 @@
                 </div>
             </div>
             <div class="mbr-figure" style="width: 56%;">
-                    <a href="page11.html"><img src="assets/images/-dsc01251-700x467.png" alt="Mobirise" title=""></a>
+                    <a href="page11.html"><img src="assets/images/-dsc02421-700x486.png" alt="Mobirise" title=""></a>
             </div>
         </div>
     </div>
@@ -649,7 +649,7 @@ Specializing in Home &amp; Auto Insurance<br></h3>
                 </div>
             </div>
             <div class="mbr-figure" style="width: 56%;">
-                    <img src="assets/images/b55d67cee2decc63371b9e7732f1db44-220x147.jpg" alt="Mobirise" title="">
+                    <img src="assets/images/-dsc02411-700x486.png" alt="Mobirise" title="">
             </div>
         </div>
     </div>
