--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/b">create your own site</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -128,7 +128,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dSPJbGhkYqMXKV5NJlAnHeepzR8LSWd2RwffRSf42edGgJqgftyhgaL+ZbAAa5CwE8bE2ssWMPQdkWuoCBY3gZpyCsBcbaY6SLzAB+FlMjk7WU4BPabJ9W2sy68zz115">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LujtDe1IWKg0Pr2linq6xGrBQMr3agKRRJ+trZfNlEdxkGH1+Y0OtXEtLOBWBGPlFmORolgFWonAdFMS2X41kV3v2xol7X08dlCNzw+VqUxpSmIvTzJVBHHbO9dKumD4">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
@@ -227,7 +227,7 @@
                 </div>
             </div><div class="team-item col-lg-3 col-md-6">
                 <div class="item-image">
-                    <a href="tracey.html"><img src="assets/images/-dsc01251-510x340.png" alt="" title=""></a>
+                    <a href="tracey.html"><img src="assets/images/-dsc02421-510x354.png" alt="" title=""></a>
                 </div>
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
@@ -323,7 +323,7 @@
                 </div>
             </div><div class="team-item col-lg-3 col-md-6">
                 <div class="item-image">
-                    <a href="doug.html"><img src="assets/images/b55d67cee2decc63371b9e7732f1db44-220x147.jpg" alt="" title=""></a>
+                    <a href="doug.html"><img src="assets/images/-dsc02411-510x354.png" alt="" title=""></a>
                 </div>
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
