--- a/cyndi.html
+++ b/cyndi.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6dpD4cyVFSa8hcCiCzUShluKUUoeYOhdY+cvMV1ewnbC9vkRfeVRVARR3gL4b2q7CEUyyk8truneC4uVcpuS8HKky/dUIORkKdfFtqtzWuJt/HoHJZtK+CxWUcEdglQl">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="maaB/4ey+VuaFRlhkhKdStQKyVsE1I97SCI2hxlLL3eIyRpJinDLrS5SqQbd5QIjIVTWlTUiBNlheS2FHGOJ6ubnJgI8XzYDD0Z65lPtJsVauELTzl1+pCbZoqUlA/sE">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
