--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,20 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-72899582-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-72899582-1');
+</script>
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-r6QbX5VOsT" once="menu" id="menu2-3w">
 
     
@@ -66,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create your own site</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -128,7 +142,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LujtDe1IWKg0Pr2linq6xGrBQMr3agKRRJ+trZfNlEdxkGH1+Y0OtXEtLOBWBGPlFmORolgFWonAdFMS2X41kV3v2xol7X08dlCNzw+VqUxpSmIvTzJVBHHbO9dKumD4">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wSNSaeqoWV2UPVLZ72v5GsBrez3PdBoW3FPhnHJc+LXpa3TSMqXcYeL7BC8ttMHBnvP5tX8QQSBLwijjHFDkJbNkdOlUeYSG3/KvXeBLEfo04Vf6eNBcB6NlrTyyZKoU">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
