--- a/reviews.html
+++ b/reviews.html
@@ -23,6 +23,20 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-72899582-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-72899582-1');
+</script>
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-r6QbT5rK2D" once="menu" id="menu2-3v">
 
     
@@ -66,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section class="mbr-section content5 cid-r6QfMYdPT0" id="content5-4g">
+<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section class="mbr-section content5 cid-r6QfMYdPT0" id="content5-4g">
 
     
 
