--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/f">simple website creator</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="TeiNpU3wsyiRYZprbeWtxl17DtZoFSEnSDlLvr2WNhX87Aznkv+m+RNHbyVw8MzZA/8ACw7QredQyuBCSqotP/xsaQHPeg70ovkr4UqZQxd98vG55bi0TF9NClhwgRDL">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="XaFbIkr4+InhUplObQpI6VYYEMoX66pGiPZpa+TaHugchyrw7Z2mi0xlWASVsvzjgn34dHKB3bS7X1SBhP/fwW/H/fWPvSVMF/6Ip5L/A5UzZFINKR0aMRB6Qzk5rEco">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
