create github pages

--- a/doug.html
+++ b/doug.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="i0s2N4IN2nkQSe82jUMv7XKkID/iO5Rh35ag7CQ/TkTeUoMzpEfqEPgQiVBNR2Kwa7YVyMNSWSh88Fwsdn1Dkd/+v1pUeVKZsbCO/+SeAoaFg6jcw681rbDh0xCd2qxX">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7G/6mJ+9EkpuxTObiVfTeDfqSwVqy1yC4Vq1Omq+6m1DojssILwUZ2P8L4gY86iq+qAA5Lik1luWYb0L8Px54gJ03q7mkrwSfJIjrCAHm7UA8OVW8n8Zjx0XPF7//6qo">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
