create github pages

--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -142,7 +142,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="g62/JxSQchVQEKj8lsHpd8dJw41U+u4kXlloKpKtSGq5yhc4ToXDmOR/x/VvlcoDXhBgiHgvVSweJL1B6hyJHSickURfoPRGqVNtHfXO1+TFGan6RWtEpRd+zA0fnQuS">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="O4DCqeqON3iWFzADGA0Q54GQH0lr3IYL+hbcET5k3IKIgUR6Ik51OlHelw+tcw/NOa5il5EeFFmu9hQhV7uh4nP05xlugBfM7IUvhZBCIGCrkyt+gakmif2lvwqnpm+I">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
@@ -351,7 +351,7 @@
                 </div>
             </div><div class="team-item col-lg-3 col-md-6">
                 <div class="item-image">
-                    <a href="frank.html"><img src="assets/images/20180919-11174022-318x212.png" alt="" title=""></a>
+                    <a href="frank.html"><img src="assets/images/20180919-1117401-397x276.png" alt="" title=""></a>
                 </div>
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
