--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
+<section class="engine"><a href="https://mobirise.info/f">simple web builder</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
 
     
 
@@ -729,7 +729,7 @@ Specializing in Home &amp; Auto Insurance<br></h3>
                 </div>
             </div>
             <div class="mbr-figure" style="width: 56%;">
-                    <img src="assets/images/20180919-11174022-318x212.png" alt="Mobirise" title="">
+                    <img src="assets/images/20180919-1117401-397x276.png" alt="Mobirise" title="">
             </div>
         </div>
     </div>
