create github pages

--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -136,13 +136,12 @@
                     </div>
                     <div class="icon-contacts pb-3">
                         <h5 class="align-left mbr-fonts-style display-5"><strong>Barrett Insurance</strong></h5>
-                        <p class="mbr-text align-left mbr-fonts-style display-7">125 W. Chicago St.<br>Jonesville, MI 49250<br><br><strong>Hours:</strong> M-F 8:00 A.M. to 5:00 P.M.<strong><br></strong><br><strong>Phone:</strong> (517) 849-1000<br><strong>Toll Free:</strong> (800) 451-0717<br><strong>Fax: </strong>(517) 849-0077&nbsp;<br><strong>
-                            Email:</strong> insure@barrettins.com<br></p>
+                        <p class="mbr-text align-left mbr-fonts-style display-7">125 W. Chicago St.<br>Jonesville, MI 49250<br><br><strong>Hours:</strong> M-F 8:00 A.M. to 5:00 P.M.<strong><br></strong><br><strong>Phone:</strong> (517) 849-1000<br><strong>Toll Free:</strong> (800) 451-0717<br><strong>Fax: </strong>(517) 849-0077<br><strong>Email:</strong> insure@barrettins.com<br><strong>After Hours Claims:</strong> (734) 210-0860<br></p>
                     </div>
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="O4DCqeqON3iWFzADGA0Q54GQH0lr3IYL+hbcET5k3IKIgUR6Ik51OlHelw+tcw/NOa5il5EeFFmu9hQhV7uh4nP05xlugBfM7IUvhZBCIGCrkyt+gakmif2lvwqnpm+I">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7isnq8x/qd6NSxm0Nw7fw4SaxYWBNGJn2hFee+Gt2QTI5kvibtnqgORWv4VIXSG1Ga5jUIATHDk2IEaMwNLDispA3tXoBDs8MUcIzkR3ul+1gtjc9XFaVNByFb36Lqxw">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
