--- a/doug.html
+++ b/doug.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Ecw+1346fNOhnrCIZk81BL9Sfnt/98fnXQ6wbbeCL4fWMM5uAwusafRP6xL7yzw8WPzZKT1PLD7JX5kJfluhR4wQAzYJWHSm+59dFOvTJMLaMlTBRyapzhoLueQWWYKn">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WPUXs2FpCTDVppCjV02wcuTiCuMsesRN7n07sSqOGXhfzKEs5xvx4L12dkSchPaVeRFjesRxLw7fGtGUNN6bqbLpyQ3mjcPsnbrlGwaDep7QtxbDolnspgnLvV4MVWka">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
