--- a/media.html
+++ b/media.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create your own site for free</a></section><section class="mbr-section content5 cid-r6QfBGX7tp" id="content5-4b">
+<section class="engine"><a href="https://mobirise.info/b">how to create a website for free</a></section><section class="mbr-section content5 cid-r6QfBGX7tp" id="content5-4b">
 
     
 
